<package format="2">
  <name>image_geometry</name>
  <version>1.12.7</version>
  <description>
    `image_geometry` contains C++ and Python libraries for interpreting images
    geometrically. It interfaces the calibration parameters in sensor_msgs/CameraInfo
    messages with OpenCV functions such as image rectification, much as cv_bridge
    interfaces ROS sensor_msgs/Image with OpenCV data types.
  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="brian.shin@lge.com">Brian Shin</maintainer>
  <license>Apache License 2.0</license>
  <url>http://www.ros.org/wiki/image_geometry</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>opencv3</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>opencv3</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <doc_depend>dvipng</doc_depend>
  <doc_depend>texlive-latex-extra</doc_depend>
</package>
